# ServerMonitor

./: .env.template  .gitignore  CLAUDE.md  README.md  docker-compose.yaml  generate_alerts.py  migrate_prometheus_data.sh  simplify_dashboard.py
config/: alert_rules.yml  alerting.yml  alerts_config.json  dashboard.json  dashboard.yml  dashboard_dynamic.json  datasources.yml  dcgm-counters.csv  monitored_drives.json  notification_policies.yml  prometheus.yml
server-doctor/: install.sh  pyproject.toml
server-doctor/src/server_doctor/: alerting.py  cli.py  config.py  remediation.py
server-doctor/src/server_doctor/collectors/: cpu.py  disk.py  gpu.py  memory.py
server-doctor/tests/: conftest.py  test_alerting.py  test_cli.py  test_cli_output.py  test_collectors.py  test_collectors_system.py  test_config.py  test_remediation.py
